--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="dropdown-content">
                 <a href="https://www.linkedin.com/in/vagish-mishra-7a2014137/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/VAGISHMISHRA" target="_blank"><i class="fa-brands fa-github"></i></a>
-                <a href="https://stackoverflow.com/users/23348794/vagish-mishra" target="_blank"><i class="fa-brands fa-stack-overflow"></i></a>
+                <!-- <a href="https://stackoverflow.com/users/23348794/vagish-mishra" target="_blank"><i class="fa-brands fa-stack-overflow"></i></a> -->
             </div>
         </div>
         <div class="content">
@@ -139,19 +139,20 @@
 </div>
 <div class="container-fluid footer-bg">
     <div class="row m-4">
-        <div class="col-md-4  text-center">Resume<br><a href="https://drive.google.com/file/d/1PFknVEIT2GbUcB054P6QzF4dhH9j8Q7f/view?usp=sharing"  target='_blank' class="btn btn-primary rounded-5 px-4 py-2">Download</a></div>
-        <div class="col-md-4 text-center">Follow Me<br>
+        <div class="col-md-3  text-center">Resume<br><a href="https://drive.google.com/file/d/1PFknVEIT2GbUcB054P6QzF4dhH9j8Q7f/view?usp=sharing"  target='_blank' class="btn btn-primary rounded-5 px-4 py-2">Download</a></div>
+        <div class="col-md-3  text-center">Cover Letter<br><a href="https://drive.google.com/file/d/1KpjN6F515ZdQUlVeutKVyh9-XPYx0jCp/view?usp=sharing"  target='_blank' class="btn btn-primary rounded-5 px-4 py-2">Download</a></div>
+        <div class="col-md-3 text-center">Follow Me<br>
             <a href="https://www.linkedin.com/in/vagish-mishra-7a2014137/" target="_blank" class="btn btn-primary rounded-5">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
             <a href="https://github.com/VAGISHMISHRA" target="_blank" class="btn btn-primary rounded-5">
                 <i class="fa-brands fa-github"></i>
             </a>
-            <a href="https://stackoverflow.com/users/23348794/vagish-mishra" target="_blank" class="btn btn-primary rounded-5">
+            <!-- <a href="https://stackoverflow.com/users/23348794/vagish-mishra" target="_blank" class="btn btn-primary rounded-5">
                 <i class="fa-brands fa-stack-overflow"></i>
-            </a>
+            </a> -->
         </div>
-        <div class="col-md-4 text-center">Contact Me
+        <div class="col-md-3 text-center">Contact Me
             <br>
             <a href="tel:+917222988146" target="_blank" class="btn btn-primary rounded-5 px-4 py-2">Call</a>
             <a href="mailto: vagishmishra527@gmail.com" target="_blank" class="btn btn-primary rounded-5 px-4 py-2">Mail</a>
